# cherryusb_gd32

./: CMakeLists.txt  README.md
app/: main.c  usb_config.h
board/: board.c  board.h
bsp/: bsp_uart.h
libraries/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
libraries/CMSIS/GD/GD32F4xx/Source/ARM/: startup_gd32f407_427.s
libraries/CherryUSB/port/dwc2/: usb_dc_dwc2.c
project/MDK(V5)/: project.uvoptx  project.uvprojx
project/MDK(V5)/RTE/_Project/: RTE_Components.h
